--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden;
+}
+
 .links line {
     stroke: #999;
-    stroke-opacity: 0.6;
+    stroke-opacity: 0.2;
 }
 
 .nodes circle {
     stroke: #fff;
     stroke-width: 1.5px;
+    fill-opacity: 0.8;
 }
