--- a/style.css
+++ b/style.css
@@ -19,6 +19,20 @@ body {
     cursor: pointer;
 }
 
+.tooltip {
+	position: absolute;
+	text-align: left;
+	width: 75;
+	height: 20px;
+	padding: 8px;
+	font: 11px sans-serif;
+	background: #ffffff;
+	border: solid 1px #0000ff;
+	border-radius: 8px;
+	pointer-events: none;
+}
+                        
+
 svg {
     cursor: url("customCursor.svg"), pointer;
 }
